--- a/Proyectos.html
+++ b/Proyectos.html
@@ -16,22 +16,22 @@
             <div class="proyecto">
                 <img src="img/prog.png" alt="Programación" >
                 <h2 >Programación</h2>
-                <p><a href="https://github.com/Josedatmt/breakingbad" target="_blank">Proyectos en Java</a></p>
+                <p><a href="https://github.com/Josedatmt/ProyectosJava" target="_blank">Proyectos en Java</a></p>
             </div>
             <div class="proyecto">
                 <img src="img/bdd.png" alt="BBDD">
                 <h2>BBDD</h2>
-                <p><a href="https://github.com/Josedatmt/breakingbad" target="_blank">Proyectos en SQL y PL/SQL</a></p>
+                <p><a href="https://github.com/Josedatmt/BBDD" target="_blank">Proyectos en SQL y PL/SQL</a></p>
             </div>
             <div class="proyecto">
                 <img src="img/Lenguaje.jpeg" alt="Lenguaje de Marcas">
                 <h2>Lenguaje de Marcas</h2>
-                <p><a href="https://github.com/Josedatmt/breakingbad" target="_blank">HTML Y CSS</a></p>
+                <p><a href="https://github.com/Josedatmt/LANDINGPAGES" target="_blank">HTML Y CSS</a></p>
             </div>
             <div class="proyecto">
                 <img src="img/SI.png" alt="Sistemas Informáticos">
                 <h2>Sistemas Informáticos</h2>
-                <p> <p><a href="https://github.com/Josedatmt/breakingbad" target="_blank">Powershell</a></p>
+                <p> <p><a href="https://github.com/Josedatmt/SistemasInformaticos" target="_blank">Powershell</a></p>
             </div>
         </section>
     </main>
