--- a/Quiensoy.html
+++ b/Quiensoy.html
@@ -22,7 +22,7 @@
     <footer>
 		<div>
 			<p>Sitio desarrollado por Jose Daniel Enriquez Mendoza.</p>
-			<a href="" target="_blank"><img src="https://icongr.am/devicon/github-original.svg?size=128&color=1d001f"></a>
+			<a href="https://github.com/Josedatmt" target="_blank"><img src="https://icongr.am/devicon/github-original.svg?size=128&color=1d001f"></a>
 			<a href="https://www.linkedin.com/in/josedatmt/" target="_blank"><img src="https://icongr.am/entypo/linkedin-with-circle.svg?size=128&color=1d001f"></a>
 		</div>
 	</footer>
