--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://github.com/Josedatmt">
                     <ion-icon name="logo-github"></ion-icon>
                 </a>
             </li>
